--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	implementation 'org.web3j:core:4.9.4'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	//implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final
 }
 
