--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 #SMTP ?? ?? (Gmail)
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ddaggeundb@gmail.com
-spring.mail.password=ddaggeundb1906
+spring.mail.password=vabbtkcyhaqlahvg
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
