--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.4'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
 }
 
 group = 'com.donation'
@@ -13,10 +14,27 @@ java {
 	}
 }
 
+def generated = "src/main/generated"
+querydsl {
+	jpa = true
+	querydslSourcesDir = generated
+}
+sourceSets {
+	main {
+		java {
+			srcDirs = ['src/main/java', 'src/main/resources']
+		}
+	}
+}
+compileQuerydsl {
+	options.annotationProcessorPath = configurations.querydsl
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	querydsl.extendsFrom compileClasspath
 }
 
 repositories {
@@ -37,9 +55,22 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	implementation 'org.web3j:core:4.9.4'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	//implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final
+
+	// queryDSL
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+clean {
+	delete file('src/main/generated')
+}
+
+
