--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # DATABASE
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:~/local2
+spring.datasource.url=jdbc:h2:tcp://localhost/~/local2
 #spring.datasource.url=jdbc:h2:tcp://192.168.1.107:14281/~/local2
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
