[feat] 기부하기 구현

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,17 @@ configurations {
 repositories {
 	mavenCentral()
 }
+// build.gradle
+tasks.register('copyContractJson', Copy) {
+	from 'D:/BlockChain/build/contracts/SimpleDonationPlatform.json'
+	into 'src/main/resources/contracts/'
+}
+
+tasks.named('processResources').configure {
+	dependsOn 'copyContractJson'
+}
+
+
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
@@ -55,17 +66,19 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	runtimeOnly 'com.h2database:h2'
-	implementation 'org.web3j:core:4.9.4'
+	implementation 'org.web3j:core:4.9.8'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
-<<<<<<< HEAD
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-=======
+
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
->>>>>>> ab1c5bd929af34aa7fd79f2709e916170b34f4ab
 	//implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final
 
 	// queryDSL
