--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ddaggeundb@gmail.comc
+spring.mail.username=ddaggeundb@gmail.com
 spring.mail.password=vabbtkcyhaqlahvg
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
