--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.4'
 	id 'io.spring.dependency-management' version '1.1.7'
-	id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
+	// 이 플러그인 제거 - 최신 Spring Boot와 호환성 문제
+	// id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
 }
 
 group = 'com.donation'
@@ -14,27 +15,17 @@ java {
 	}
 }
 
-def generated = "src/main/generated"
-querydsl {
-	jpa = true
-	querydslSourcesDir = generated
-}
+// QueryDSL 설정 - 최신 방식으로 변경
+def generated = 'src/main/generated'
+
 sourceSets {
-	main {
-		java {
-			srcDirs = ['src/main/java', 'src/main/resources']
-		}
-	}
-}
-compileQuerydsl {
-	options.annotationProcessorPath = configurations.querydsl
+	main.java.srcDirs += generated
 }
 
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
-	querydsl.extendsFrom compileClasspath
 }
 
 repositories {
@@ -57,26 +48,27 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	implementation 'org.web3j:core:4.9.4'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-	//implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final
 
-	// queryDSL
+	// QueryDSL
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
 	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
 	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
 }
 
-
 tasks.named('test') {
 	useJUnitPlatform()
 }
 
-clean {
-	delete file('src/main/generated')
+// JavaCompile 설정
+tasks.withType(JavaCompile) {
+	options.getGeneratedSourceOutputDirectory().set(file(generated))
 }
 
+// Clean 시 generated 폴더 삭제
+clean {
+	delete file(generated)
+}
